--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules/
 .expo/
 dist/
+data/
 npm-debug.*
 *.jks
 *.p8
@@ -9,6 +10,8 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
+.env
+.env.*
 
 # macOS
 .DS_Store
